# burntbeats-aws

./: .dockerignore  .env.example  .gitattributes  .gitignore  .markdownlint.json  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  TO-DO-ASAP.md  benchmark_song.local.example.txt  check_models.py  check_stem.py  deploy-to-ec2.sh  docker-compose.local-nobind.yml  docker-compose.yml  run_api_tests.sh  run_full_tests.sh  run_tests.sh  start_stem_service.sh  test_import.py  test_import2.py  test_import3.py  test_model_priority.py  test_py.sh  test_server.py
backend/: .dockerignore  .env.example  Dockerfile  allowedOrigins.js  billing.js  clerkAuth.js  clerkWebhook.js  clerkWebhook.test.js  clientSafeError.js  clientSafeError.test.js  email-routes.js  email-service.js  eslint.config.js  malwareScan.js  malwareScan.test.mjs  package-lock.json  package.json  returnUrl.js  s3Presign.js  server.js  server.test.js  stripeRedis.js  uploadSniff.js  uploadSniff.test.js  usageTokens.js
burnt-beats-pricing-structure/: index.html  package-lock.json
docs/: AGENT-DEMUCS_AND_OTHERS.md  AGENT-GUIDE.MD  AGENT-Knowledge-Block.md  AGENT-README_MODEL_INFO.md  AGENT-compatible-frontend-strategy.md  AGENT-decision-knowledge-context.md  AGENT-decision-knowledge-context.yaml  AGENT-frontend-next-steps.yaml  AGENT-models-and-implementation.md  AGENT-models-and-implementation.yaml  ARCHITECTURE-FLOW.md  BACKEND-HARDENING-2026-03-24.md  BILLING-AND-TOKENS.md  CHERRY-PICK-FINDINGS.md  CPU-2STEM-MODEL-GUIDE-T3-LARGE.md  DOCS-STATUS.md  (+42 more)
stem_api/: Cargo.toml
stem_api/src/: main.rs  phase_inversion.rs
(+354 files in other folders)
