[package]
name = "stem_api"
version = "0.1.0"
edition = "2021"
description = "Stem split API: hybrid pipeline orchestration (Rust) + Python Stage1/Stage2"

[dependencies]
axum = { version = "0.7", features = ["json", "multipart", "static"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hound = "3"
uuid = { version = "1", features = ["v4"] }
